Closed Bug 1274079 Opened 8 years ago Closed 8 years ago

Crash in nsDocumentViewer::PrintPreview

Categories

(Core :: Print Preview, defect)

x86
Windows 7
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox47 --- wontfix
firefox48 --- wontfix
firefox49 --- fixed
firefox-esr45 --- affected
firefox50 --- fixed
firefox51 --- fixed

People

(Reporter: n.nethercote, Assigned: smaug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-014b6fa2-03af-4f59-928a-fd6752160511.
=============================================================

This crash signature has occurred 363 times in the past week. The crash address is always 0x10.

The crashing line is this one:

>     rv = mPrintEngine->Initialize(this, mContainer, doc,
>                                   float(mDeviceContext->AppUnitsPerCSSInch()) /
>                                   float(mDeviceContext->AppUnitsPerDevPixel()) /
>                                   mPageZoom,
> #ifdef DEBUG
>                                   mDebugFile
> #else
>                                   nullptr
> #endif
>                                   );

Presumably mPrintEngine or mDeviceContext is bogus. Given that mPrintEngine is
newly constructed just prior, it seems likely that mDeviceContext is the
problem.

smaug, are you an appropriate person to look at this? If not, can you suggest
somebody? Thank you.
Crash volume for signature 'nsDocumentViewer::PrintPreview':
 - nightly(version 50):8 crashes from 2016-06-06.
 - aurora (version 49):1 crash from 2016-06-07.
 - beta   (version 48):258 crashes from 2016-06-06.
 - release(version 47):1846 crashes from 2016-05-31.
 - esr    (version 45):349 crashes from 2016-04-07.

Crash volume on the last weeks:
            W. N-1  W. N-2  W. N-3  W. N-4  W. N-5  W. N-6  W. N-7
 - nightly       3       1       0       2       0       0       2
 - aurora        1       0       0       0       0       0       0
 - beta         47      46      40      21      25      31      43
 - release     262     257     287     248     242     251     224
 - esr          37      40      29      32      39      17      45

Affected platforms: Windows, Linux
Flags: needinfo?(bugs)
ah, yes, we dispatch beforeprint and don't ensure after that everything is ok.
Assignee: nobody → bugs
Flags: needinfo?(bugs)
Attachment #8777025 - Flags: review?(bzbarsky)
Comment on attachment 8777025 [details] [diff] [review]
printpreview_crash.diff

r=me
Attachment #8777025 - Flags: review?(bzbarsky) → review+
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/3dcece1fa220
ensure that after dispatching beforeprint, we have still valid ContentViewer to print, r=bz
https://hg.mozilla.org/mozilla-central/rev/3dcece1fa220
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Hi Olli, could you please nominate for uplift to Aurora50?
Flags: needinfo?(bugs)
Comment on attachment 8777025 [details] [diff] [review]
printpreview_crash.diff

Approval Request Comment
[Feature/regressing bug #]: Something old, possibly bug 307258
[User impact if declined]: crashes
[Describe test coverage new/current, TreeHerder]: NA
[Risks and why]: Should be safe null checks
[String/UUID change made/needed]: NA
Flags: needinfo?(bugs)
Attachment #8777025 - Flags: approval-mozilla-aurora?
Comment on attachment 8777025 [details] [diff] [review]
printpreview_crash.diff

Low volume crash fix, Aurora50+
Attachment #8777025 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Olli, seems safe enough to take it in beta too. wdyt?
Flags: needinfo?(bugs)
Comment on attachment 8777025 [details] [diff] [review]
printpreview_crash.diff

I think so

Approval Request Comment
See the approval request for Aurora
Flags: needinfo?(bugs)
Attachment #8777025 - Flags: approval-mozilla-beta?
Comment on attachment 8777025 [details] [diff] [review]
printpreview_crash.diff

Thanks, taking it.
Attachment #8777025 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Should be in 49 beta 7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: