Bug 1274079 - Ensure that after dispatching beforeprint, we have still valid ContentViewer to print. r=bz, a=ritu

--HG--
extra : source : 3dcece1fa22087cafa83b9c25b615d7a735e9205